[project]
name = "asynccachedview"
version = "0.0.1"
authors = [
  { name="Alexander Sosedkin", email="monk@unboiled.info" },
]
description = "Make asynchronous requests, online and offline"
urls.homepage = "https://github.com/t184256/asynccachedview"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
requires-python = ">=3.11"
dependencies = [
    "aiosqlite",
    "aiohttp != 3.9",  # https://github.com/pnuckowski/aioresponses/issues/247
    "aiosqlitemydataclass@git+https://github.com/t184256/aiosqlitemydataclass#egg=t184256/aiosqlitemydataclass/f0726a1226f0f821f007632f7c9fa2cf1386a508",
    "awaitable-property@git+https://github.com/t184256/awaitable-property#egg=57c39d031c852dcf67457461d335ace5a1102c23",
] # TODO: list python dependencies
optional-dependencies.test = [
    "asyncio-loop-local@git+https://github.com/t184256/asyncio-loop-local#egg=51aad647f8bd643bed5632e9eb4d213bb3afdd22",
    "pytest",
    "coverage", "pytest-cov",
    "mypy", "pytest-mypy",
    "ruff",
    "pytest-asyncio",
    "aioresponses",
    "asyncio-loop-local>=0.0.3",
]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
addopts = "--mypy --cov --cov-report term-missing --doctest-modules"

[tool.coverage]
run.source = [ "asynccachedview" ]
run.branch = true
report.exclude_lines = [
  "# pragma: no cover",
  "if __name__ == .__main__.:",
  "if typing.TYPE_CHECKING:",
  "...  # protocol",
]
report.fail_under = 100

[tool.mypy]
strict = true
new_type_inference = true

[tool.ruff]
line-length = 79
preview = true
lint.select = [ "ALL" ]
lint.ignore = [
  "ANN101",  # missing-type-self
  "ANN102",  # missing-type-cls
  "D105",  # undocumented-magic-method
  "D203",  # one-blank-line-before-class
  "D213",  # multi-line-summary-second-line
  "FIX002",  # line-contains-todo
  "FIX004",  # line-contains-hack
  "S101",  # assert
  "TD002",  # missing-todo-author
  "TD003",  # missing-todo-link
]
lint.per-file-ignores."tests/**" = [
  "D101",  # undocumented-public-class
  "D102",  # undocumented-public-method
  "INP001",  # implicit-namespace-package
  "S101",  # assert
  "SLF001",  # private-member-access
]
lint.flake8-quotes.inline-quotes = "single"
lint.flake8-quotes.multiline-quotes = "single"
lint.flake8-copyright.notice-rgx = '# SPDX-FileCopyrightText: 2023 Alexander Sosedkin <monk@unboiled.info>\n# SPDX-License-Identifier: GPL-3.0\n'
format.quote-style = "single"
format.preview = true
